# OBB

./: .gitignore  =1.26  README.md  dataset.yaml  eval_once.py  evaluator.py  lr_utils.py  multi_noise_loss.py  obbpose_head.py  requirements.txt  setup.cfg  td_obb_kpt1_loss.py  train.py  trainer.py  yolo11_obbpose_td.py
OBB_improved/: train.py
OBB_modified/: train.py
OBB_modified/scripts/: train.py
OBB_modified/src/models/: yolo11_obbpose_td.py
OBB_updated/: train.py
scripts/: ckpt_diff.py  eval_once.py  model_keys.py  model_keys.txt  smoke.py  train.py  try_load_with_mapping.py
src/configs/: config.py  obbpose11.yaml
src/configs/model/: obbpose11.yaml
src/configs/train/: default.yaml
src/data/: __init__.py  build.py  collate.py  datasets.py  mosaic_wrapper.py  smoke_test_data.py  transforms.py  yolo_obb_kpt_dataset.py
src/engine/: __init__.py  checkpoint.py  dist.py  evaluator.py  evaluator_full.py  trainer.py
src/models/: obbpose_model.py  smoke_test_yolo11_obbpose_td.py  yolo11_obbpose_td.py
src/models/backbones/: cspnext11.py
src/models/heads/: obbpose_head.py
src/models/layers/: rot_roi.py
src/models/losses/: multi_noise_loss.py  obb_kpt1_loss.py  td_obb_kpt1_loss.py
src/models/necks/: pan_fpn.py
src/obbpose11.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
src/utils/: box_ops.py  convert_normal2rotated.py  distrib.py  distributed.py  lr_utils.py  model_schema.py  parse_yolo_obb_kpt.py  visualize_formatted_labels.py
ultralytics/cfg/: __init__.py
ultralytics/nn/: tasks.py
ultralytics/utils/: loss.py
(+13 files in other folders)
