[metadata]
name = obbpose11
version = 0.1.0
description = OBB + Keypoint training code (YOLO11-style TD)
author = Your Team
license = MIT
license_files = LICENSE*

[options]
package_dir =
    = src
packages = find:
include_package_data = True
python_requires = >=3.10

# Keep install_requires minimal; your conda env likely already has these.
# If you want pip to pull deps, uncomment and edit below.
# install_requires =
#     numpy
#     torch
#     opencv-python
#     mmcv

[options.packages.find]
where = src
